@@ -1,5 +1,10 @@
 2008-10-28  Richard Hult  <richard@imendio.com>
 
+	* src/dh-search.c (dh_search_new): Remove the extra frame and set
+	the shadow on the scrolled windows instead, looks more consistent.
+
+2008-10-28  Richard Hult  <richard@imendio.com>
+
 	* src/dh-window.c: Clean up a bit, make the html view/content tab
 	syncing work again, don't make the notebook tabs expand, remove
 	unused code.
